Recreated everything! Thanks to @cmulay for his portfolio, this website is also based on it!

--- a/index.html
+++ b/index.html
@@ -7,256 +7,206 @@
 
 <head>
 
-	<!-- Basic Page Needs
+    <!-- Basic Page Needs
 	================================================== -->
-	<meta charset="utf-8">
-	<title>Home</title>
-	<meta name="description" content="Chinmay Mulay's Portfolio" />
-	<meta name="author" content="Chinmay Mulay">
-	<meta name="keywords"
-		content="website, design, html5, css3, jquery, creative, clean, animated, portfolio, multi-page" />
-	<meta property="og:title" content="Chinmay Mulay's Portfolio" />
-	<meta property="og:type" content="website" />
-	<meta property="og:url" content="" />
-	<meta property="og:image" content="" />
-	<meta property="og:image:width" content="470" />
-	<meta property="og:image:height" content="246" />
-	<meta property="og:site_name" content="" />
-	<meta property="og:description" content="Chinmay Mulay's Portfolio" />
-	<meta name="twitter:card" content="" />
-	<meta name="twitter:site" content="https://twitter.com/cmulay17" />
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:description" content="Chinmay Mulay's Portfolio" />
-	<meta name="twitter:image" content="" />
+    <meta charset="utf-8">
+    <title>Nalin is a Dev</title>
+    <meta name="description" content="Nalin's Portfolio" />
+    <meta name="author" content="Nalin Angrish">
 
-	<!-- Mobile Specific Metas
+    <!-- Mobile Specific Metas
 	================================================== -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<meta name="theme-color" content="#212121" />
-	<meta name="msapplication-navbutton-color" content="#212121" />
-	<meta name="apple-mobile-web-app-status-bar-style" content="#212121" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="theme-color" content="#ececec" />
+    <meta name="msapplication-navbutton-color" content="#ececec" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#ececec" />
 
-	<!-- Web Fonts 
+    <!-- Web Fonts 
 	================================================== -->
-	<link
-		href="https://fonts.googleapis.com/css?family=Muli:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext,vietnamese"
-		rel="stylesheet">
-	<link
-		href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese"
-		rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Muli:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext,vietnamese" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
 
-	<!-- CSS
+    <!-- CSS
 	================================================== -->
-	<link rel="stylesheet" href="css/bootstrap.min.css" />
-	<link rel="stylesheet" href="css/font-awesome.min.css" />
-	<link rel="stylesheet" href="css/animsition.min.css" />
-	<link rel="stylesheet" href="css/swiper.min.css" />
-	<link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/animsition.min.css" />
+    <link rel="stylesheet" href="css/swiper.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
-	<!-- Favicons
+    <!-- Favicons
 	================================================== -->
-	<link rel="icon" type="image/png" href="favicon.jpg">
-	<link rel="apple-touch-icon" href="apple-touch-icon.jpg">
-	<link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.jpg">
-	<link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.jpg">
+    <link rel="icon" type="image/png" href="favicon.jpg">
+    <link rel="apple-touch-icon" href="apple-touch-icon.jpg">
+    <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.jpg">
+    <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.jpg">
 
 </head>
 
 <body oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
 
-	<!-- Page preloader wrap
+    <!-- Page preloader wrap
 	================================================== -->
 
-	<div class="animsition">
+    <div class="animsition">
 
-		<!-- Nav and Logo
+        <!-- Nav and Logo
 		================================================== -->
 
-		<header class="cd-header">
-			<div class="header-wrapper">
-				<div class="logo-wrap">
-					<a href="index.html" class="hover-target animsition-link">
-						<h6 class="fullscreen-image no-blur" style="font-weight: 1000;">The Guy with Glasses</h6>
-					</a>
-				</div>
-				<div class="nav-but-wrap">
-					<div class="menu-icon hover-target">
-						<span class="menu-icon__line menu-icon__line-left"></span>
-						<span class="menu-icon__line"></span>
-						<span class="menu-icon__line menu-icon__line-right"></span>
-					</div>
-				</div>
-			</div>
-		</header>
+        <header class="cd-header">
+            <div class="header-wrapper">
+                <div class="logo-wrap">
+                    <a href="http://www.nalinangrish.me" class="hover-target animsition-link">
+                        <h6 class="fullscreen-image no-blur" style="font-weight: 1000;">Nalin Angrish</h6>
+                    </a>
+                </div>
+                <div class="nav-but-wrap">
+                    <div class="menu-icon hover-target">
+                        <span class="menu-icon__line menu-icon__line-left"></span>
+                        <span class="menu-icon__line"></span>
+                        <span class="menu-icon__line menu-icon__line-right"></span>
+                    </div>
+                </div>
+            </div>
+        </header>
 
-		<div class="nav">
-			<div class="nav__content">
-				<div class="curent-page-name-shadow">About</div>
-				<ul class="nav__list">
-					<li class="nav__list-item active-nav"><a href="index.html"
-							class="hover-target animsition-link">About</a></li>
+        <div class="nav">
+            <div class="nav__content">
+                <div class="curent-page-name-shadow">About</div>
+                <ul class="nav__list">
+                    <li class="nav__list-item active-nav"><a href="index.html" class="hover-target animsition-link" style="color: black;">About</a></li>
 
-					<li class="nav__list-item"><a href="projects.html" class="hover-target animsition-link">Projects</a>
-					</li>
-					<li class="nav__list-item"><a href="contact.html" class="hover-target animsition-link">Contact</a>
-					</li>
-				</ul>
-			</div>
-		</div>
+                    <li class="nav__list-item"><a href="http://www.nalinangrish.me/apps" class="hover-target animsition-link" style="color: black;">Projects</a>
+                    </li>
+                    <li class="nav__list-item"><a href="http://www.nalinangrish.me/contact" class="hover-target animsition-link" style="color: black;">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
-		<!-- Primary Page Layout
+        <!-- Primary Page Layout
 		================================================== -->
 
-		<div class="shadow-title parallax-top-shadow">About</div>
+        <div class="shadow-title parallax-top-shadow">About</div>
 
-		<div class="section padding-page-top padding-bottom over-hide z-bigger">
-			<div class="container z-bigger">
-				<div class="row page-title px-5 px-xl-2">
-					<h1>
-						<div class="col-12 parallax-fade-top ">
-							<h1>Hello, I'm Chinmay Mulay.</h1>
-						</div>
-					</h1>
-					<div class="offset-1 col-11 parallax-fade-top mt-2 mt-sm-3">
-						<p style="color:#1E90FF" class="typewrite" data-period="1500"
-							data-type='[ "I&apos;m a Student", "I&apos;m a Developer", "I&apos;m an Entrepreneur"]'>
-						</p>
-					</div>
-				</div>
-				<div class="col-lg-7 padding-top" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
-					<blockquote class="blockquote">
-						<p class="lead-big color-white mb-0"><em>Let's invent tomorrow, rather than worrying about what
-								happened yesterday.</em></p>
-						<h6 class="mt-5"> - Steve Jobs</h6>
-					</blockquote>
-				</div>
-			</div>
-		</div>
+        <div class="section padding-page-top padding-bottom over-hide z-bigger">
+            <div class="container z-bigger">
+                <div class="row page-title px-5 px-xl-2">
+                    <h1>
+                        <div class="col-12 parallax-fade-top ">
+                            <h1>Hi, I'm Nalin Angrish.</h1>
+                        </div>
+                    </h1>
+                    <div class="offset-1 col-11 parallax-fade-top mt-2 mt-sm-3">
+                        <p style="color:#1E90FF" class="typewrite" data-period="1500" data-type='[ "I&apos;m a Student", "I&apos;m a Developer", "I&apos;m a Blogger"]'>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-7 padding-top" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.2s">
+                    <blockquote class="blockquote">
+                        <p class="lead-big mb-0"><em>I think it's possible for ordinary people to chose to be extraordinary</em></p>
+                        <h6 class="mt-5"> - Elon Musk</h6>
+                    </blockquote>
+                </div>
+            </div>
+        </div>
 
-		<div class="section padding-bottom-big over-hide z-bigger">
-			<div class="container">
-				<div class="row px-5 px-xl-2">
-					<div class="col-12 padding-top">
-						<h3>What I can do</h3>
-					</div>
-					<div class="col-12 mt-2 mb-5 page-title-small">
-						<p class="mb-0 pb-0">Hands on </p>
-					</div>
-					<div class="col-md-4" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.1s">
-						<ul class="studio-list">
-							<li>
-								<p>C | CPP</p>
-							</li>
-							<li>
-								<p>HTML CSS </p>
-							</li>
-							<li>
-								<p>JS PHP</p>
-							</li>
-							<li>
-								<p>Java | Advance Java</p>
-							</li>
-							<li>
-								<p>VB.NET</p>
-							</li>
-						</ul>
-					</div>
-					<div class="col-md-4" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.15s">
-						<ul class="studio-list">
-							<li>
-								<p>Google Assistant Developer</p>
-							</li>
-							<li>
-								<p>Android Developer [Java]</p>
-							</li>
-							<li>
-								<p>iOS Developer [Swift 5 - Moderate]</p>
-							</li>
-							<li>
-								<p>Python Developer</p>
-							</li>
-							<li>
-								<p>Machine Learning</p>
-							</li>
-						</ul>
-					</div>
-					<div class="col-md-4" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.15s">
-						<ul class="studio-list">
-							<li>
-								<p>Database: MySQL, Access, Oracle, SQLite</p>
-							</li>
-							<li>
-								<p>Database: Firebase, AWS, MongoDB [Beginner]</p>
-							</li>
-							<li>
-								<p>Video Editing [FCPX & Adobe Premiere Pro]</p>
-							</li>
-							<li>
-								<p>Audio Production [Adobe Audition]</p>
-							</li>
-							<li>
-								<p>Designer [Adobe Illustrator & Adobe XD]</p>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
+        <div class="section padding-bottom-big over-hide z-bigger">
+            <div class="container">
+                <div class="row px-5 px-xl-2">
+                    <div class="col-12 padding-top">
+                        <h3>What I can do</h3>
+                    </div>
+                    <div class="col-12 mt-2 mb-5 page-title-small">
+                        <p class="mb-0 pb-0">Hands on </p>
+                    </div>
+                    <div class="col-md-6" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.1s">
+                        <ul class="studio-list">
+                            <li>
+                                <p>Python</p>
+                            </li>
+                            <li>
+                                <p>HTML</p>
+                            </li>
+                            <li>
+                                <p>CSS</p>
+                            </li>
+                            <li>
+                                <p>JS</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.15s">
+                        <ul class="studio-list">
+                            <li>
+                                <p>Java</p>
+                            </li>
+                            <li>
+                                <p>Android Developer [Java]</p>
+                            </li>
+                            <li>
+                                <p>Python Developer</p>
+                            </li>
+                            <li>
+                                <p>Database: MySQL, SQLite</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-		<div class="section padding-top-bottom over-hide z-bigger background-dark-3 footer">
-			<div class="shadow-on-footer" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.1s">Say Hello
-			</div>
-			<div class="container" data-scroll-reveal="enter bottom move 20px over 0.5s after 0.4s">
-				<div class="row">
-					<div class="col-12 text-center z-bigger py-5">
-						<div class="footer-lines">
-							<a href="contact.html" class="hover-target animsition-link">
-								<h4>Have a Project?</h4>
-							</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+        <div class="section padding-top-bottom over-hide z-bigger background-light-3 footer">
+            <div class="shadow-on-footer" data-scroll-reveal="enter bottom move 30px over 0.5s after 0.1s">
+                Get in touch
+            </div>
+            <div class="container" data-scroll-reveal="enter bottom move 20px over 0.5s after 0.4s">
+                <div class="row">
+                    <div class="col-12 text-center z-bigger py-5">
+                        <div class="footer-lines">
+                            <a href="http://www.nalinangrish.me/contact" class="hover-target animsition-link">
+                                <h4 style="color:black;">Have an Idea?</h4>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-		<!-- Social links
+        <!-- Social links
 		================================================== -->
 
-		<div class="social-fixed">
-			<p>
-				<i class="hover-target fa fa-github" aria-hidden="true">
-					<a href="https://github.com/cmulay" class="hover-target">GitHub</a>
+        <div class="social-fixed" style="color: black;">
+            <p>
+                <i class="hover-target fa fa-github" aria-hidden="true">
+					<a href="https://github.com/Nalin-2005" class="hover-target" style="color: black;">GitHub</a>
 				</i>
-				<i class="hover-target fa fa-linkedin" aria-hidden="true">
-					<a href="https://www.linkedin.com/in/cmulay17/" class="hover-target">LinkedIn</a>
+                <i class="hover-target fa fa-instagram" aria-hidden="true">
+					<a href="https://www.instagram.com/nalin_2005" class="hover-target" style="color: black;">Instagram</a>
 				</i>
-			</p>
-		</div>
+            </p>
+        </div>
+        <div class="scroll-to-top hover-target"></div>
 
-		<div class="copyr">
-			2020 &copy; <a href="https://github.com/cmulay" class="hover-target">Chinmay Mulay</a>
-		</div>
-		<div class="scroll-to-top hover-target"></div>
-
-		<!-- Page cursor
+        <!-- Page cursor
 		================================================== -->
 
-		<div class='cursor' id="cursor"></div>
-		<div class='cursor2' id="cursor2"></div>
-		<div class='cursor3' id="cursor3"></div>
+        <div class='cursor' id="cursor"></div>
+        <div class='cursor2' id="cursor2"></div>
+        <div class='cursor3' id="cursor3"></div>
 
-	</div>
+    </div>
 
-	<!-- JAVASCRIPT
+    <!-- JAVASCRIPT
     ================================================== -->
-	<script src="js/jquery.min.js"></script>
-	<script src="js/typewrite.js"></script>
-	<script src="js/popper.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/plugins.js"></script>
-	<script src="js/custom.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/typewrite.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/custom.js"></script>
 
-	<!-- End Document
+    <!-- End Document
 ================================================== -->
 </body>
 
