Updated favicons and some styles

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 
     <!-- Favicons
 	================================================== -->
-    <link rel="icon" type="image/png" href="favicon.jpg">
-    <link rel="apple-touch-icon" href="apple-touch-icon.jpg">
-    <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.jpg">
-    <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.jpg">
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">
 
 </head>
 
@@ -179,10 +179,10 @@
         <div class="social-fixed" style="color: black;">
             <p>
                 <i class="hover-target fa fa-github" aria-hidden="true">
-					<a href="https://github.com/Nalin-2005" class="hover-target" style="color: black;">GitHub</a>
+					<a href="https://github.com/Nalin-2005" class="hover-target" target="_blank" style="color: black;">GitHub</a>
 				</i>
                 <i class="hover-target fa fa-instagram" aria-hidden="true">
-					<a href="https://www.instagram.com/nalin_2005" class="hover-target" style="color: black;">Instagram</a>
+					<a href="https://www.instagram.com/nalin_2005" class="hover-target" target="_blank" style="color: black;">Instagram</a>
 				</i>
             </p>
         </div>
